--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,14 @@
 {
     "name": "rafiki-ibtissam/sprint-3-php",
-    "description": "A demo package",
-    "require-dev": {
-        "squizlabs/php_codesniffer": "^3.11",
-        "phpstan/phpstan": "^2.1"
+    "description": "Un package d'exemple pour Packagist",
+    "license": "MIT",  
+    "type": "library",
+    "require": {
+        "php": ">=8.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "RafikiIbtissam\\Sprint3Php\\": "src/"
+        }
     }
 }
