--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rafiki-ibtissam/sprint-3-php",
+    "name": "rafiki-ibtissam/sprint3",
     "description": "Un package d'exemple pour Packagist",
     "license": "MIT",  
     "type": "library",
